<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/flayout">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="237dp">
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/slightdarkblue"
                android:src="@drawable/icons8_back"
                android:id="@+id/back2_fab"
                android:elevation="1dp"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="20dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/welcome"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="110dp"
                android:layout_gravity="center"
                android:text="@string/welcome"
                android:textColor="@color/black"
                android:textSize="20sp"/>
        </FrameLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="62dp"
            android:layout_gravity="center"
            android:background="@drawable/blue_border_rounded_cornwe"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:hint="@string/email"
                android:textColorHint="@color/black"
                android:inputType="textEmailAddress"
                android:layout_toRightOf="@+id/email_icon"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_regular"
                android:maxLines="1"
                android:paddingLeft="17dp"
                android:elevation="5dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_marginRight="30dp"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="15sp"/>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/email_icon"
                android:layout_marginLeft="30dp"
                android:layout_centerVertical="true"
                android:src="@drawable/email"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="36.7dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/blue_border_rounded_cornwe"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pass"
                android:hint="@string/password"
                android:textColorHint="@color/black"
                android:layout_toRightOf="@+id/pass_icon"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_regular"
                android:inputType="textPassword"
                android:maxLines="1"
                android:elevation="5dp"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_marginRight="30dp"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="15sp"/>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/pass_icon"
                android:layout_marginLeft="30dp"
                android:layout_centerVertical="true"
                android:src="@drawable/password"/>
        </RelativeLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_password"
            android:id="@+id/showpassword"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="10dp"/>


        <RelativeLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="36.7dp"
            android:layout_marginRight="62dp"
            android:backgroundTint="@color/slightdarkblue"
            android:background="@drawable/blue_border_rounded_cornwe"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sign_in2"
                android:text="@string/sign_in"
                android:layout_toRightOf="@+id/signin2_icon"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_regular"
                android:maxLines="1"
                android:elevation="5dp"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_marginRight="30dp"
                android:textSize="15sp"/>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/signin2_icon"
                android:layout_marginLeft="30dp"
                android:layout_centerVertical="true"
                android:src="@drawable/in"/>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_medium"
            android:text="FORGOT PASSWORD ?"
            android:id="@+id/forgotpassword"
            android:textColor="@color/black"
            android:textSize="10.5dp"/>

    </LinearLayout>



</RelativeLayout>