<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/flayout2">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="225dp">
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/slightdarkblue"
                android:src="@drawable/icons8_back"
                android:id="@+id/back3_fab"
                android:elevation="1dp"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="20dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/forgotpassword"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="105dp"
                android:layout_gravity="center"
                android:text="@string/forgot_password"
                android:textColor="@color/black"
                android:textSize="20sp"/>
        </FrameLayout>

        <TextView
            android:layout_width="325dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:text="@string/enter_email"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_gravity="center"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="62dp"
            android:layout_gravity="center"
            android:background="@drawable/blue_border_rounded_cornwe"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email6"
                android:hint="@string/email"
                android:textColorHint="@color/black"
                android:inputType="textEmailAddress"
                android:layout_toRightOf="@+id/email_icon"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_regular"
                android:maxLines="1"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_marginRight="30dp"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="15sp"
                android:elevation="5dp"/>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/email_icon"
                android:layout_marginLeft="30dp"
                android:layout_centerVertical="true"
                android:src="@drawable/email"/>
        </RelativeLayout>



        <RelativeLayout
            android:layout_width="180dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/blue_border_rounded_cornwe"
            android:backgroundTint="@color/slightdarkblue">

            <Button
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_toRightOf="@+id/next_icon"
                android:background="@android:color/transparent"
                android:elevation="5dp"
                android:fontFamily="@font/poppins_regular"
                android:maxLines="1"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/next"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/next_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:src="@drawable/next" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_medium"
            android:text="SWITCH ACCOUNTS ?"
            android:id="@+id/switchaccounts"
            android:textColor="@color/black"
            android:textSize="10.5dp"/>


    </LinearLayout>



</RelativeLayout>