<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/flayout3">

     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="237dp">
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/slightdarkblue"
             android:src="@drawable/back"
             android:id="@+id/back3_fab"
             android:elevation="1dp"
             android:layout_marginLeft="18dp"
             android:layout_marginTop="20dp"/>
    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_heart"
        app:lottie_rawRes="@raw/loginheart"
        android:layout_gravity="center"
        android:layout_marginBottom="25dp"
        android:layout_marginRight="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:text="@string/quote"
        android:textColor="@color/black"
        android:textSize="20sp"/>
     </FrameLayout>

        <RelativeLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="62dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/lightblue"
            android:background="@drawable/blue_border_rounded_cornwe"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sign_in"
                android:text="@string/sign_in"
                android:textColor="@color/black"
                android:layout_toRightOf="@+id/signin_icon"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_regular"
                android:maxLines="1"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_marginRight="30dp"
                android:textSize="15sp"
                android:elevation="5dp"/>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/signin_icon"
                android:layout_marginLeft="30dp"
                android:layout_centerVertical="true"
                android:src="@drawable/in"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="36.7dp"
            android:layout_marginRight="62dp"
            android:backgroundTint="@color/lightblue"
            android:background="@drawable/blue_border_rounded_cornwe"
            >

            <Button
                android:id="@+id/sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="19dp"
                android:background="@android:color/transparent"
                android:elevation="5dp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular"
                android:maxLines="1"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/sign_up"
                android:textSize="15sp" />
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/signup_icon"
                android:layout_marginLeft="30dp"
                android:layout_centerVertical="true"
                android:src="@drawable/sign"/>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="-----OR-----"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textSize="20dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/google"
                android:id="@+id/google"
                android:elevation="1dp"
                android:backgroundTint="@color/lightblue"
                android:layout_marginLeft="140dp"
                android:layout_marginRight="20dp"
                />
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_local_phone_24"
                android:id="@+id/phone"
                android:backgroundTint="@color/lightblue"
                android:elevation="1dp"
                android:layout_toRightOf="@+id/google"
                />

        </RelativeLayout>
    </LinearLayout>



</RelativeLayout>